# pmsm_simscape

./: .gitignore  PMSMDrive_with_our_controller.slxc  README.md  SESSION_HANDOFF_2026-03-24.md  my_blue_plant_wrapper.slxc  pmsm_foc_model.slxc  setup_project.m  test.md  tmp_triangle_probe.slx
.github/: copilot-instructions.md
cpp/: CMakeLists.txt
cpp/include/: foc_controller.h  pid_controller.h  svpwm.h  transforms.h
cpp/mex/: foc_controller_mex.cpp
cpp/src/: foc_controller.cpp  pid_controller.cpp  pybind_module.cpp  svpwm.cpp  transforms.cpp
cpp/tests/: test_foc_controller.cpp
docs/: cpp_overview.md  overview.md  theme_build_and_validation.md  theme_control_core.md  theme_python_ros2_integration.md  theme_repository_map.md  theme_simscape_simulation.md
docs/.obsidian/: workspace.json
exercises/: ex1_counter_class.cpp  ex2_pi_controller.cpp
matlab/+pmsm_lib/: clarke_transform.m  inv_park_transform.m  park_transform.m  pmsm_dq_model.m  svpwm_modulator.m
matlab/models/: tmp_save_mdl.mdl
matlab/s_function/: sfun_foc_controller.cpp  sfun_pi_controller.cpp  sfun_speed_controller.cpp
matlab/scripts/: SimscapeROS2Bridge.m  build_foc_mex.m  build_sfun_foc.m  build_sfun_pid.m  check_foc_angle_contract.m  compare_first_order_bandwidths.m  create_pmsmdrive_with_our_controller.m  diagnose_foc_interface_cases.m  export_blue_final_tuned_images.m  export_phase1_blue_scope_images.m  export_phase1_scope_images.m  run_blue_theta_mode_sweep.m  run_blue_theta_offset_sweep.m  run_build_sfun_foc_wrapper.m  run_create_and_simulate_foc_module.m  run_gate_driver_module_test.m  run_phase1_acceptance.m  run_phase1_blue_acceptance.m  run_plantcore_openloop_test.m  run_pmsm_simulation.m  run_transform_module_test.m  scan_blue_gate_orders.m  scan_blue_theta_mapping.m  stage_example_drive_blocks.m  wire_blue_plantcore_from_example.m
matlab/simscape/: create_blue_plant_wrapper_template.m  create_foc_controller_module.m  create_measure_module.m  create_motor_module.m  create_pmsm_foc_all_in_model.m  create_pmsm_foc_model.m  create_pmsm_foc_model.m.bak  create_scope_module.m  create_signal_in_module.m  create_three_invertor_module.m  create_thro_module.m  pmsm_foc_builder.m  pmsm_foc_simscape.m  pmsm_model_fcn.m  pmsm_motor.ssc  svpwm_inline.m  validate_pmsm_foc_modules.m
matlab/tests/: test_pmsm_lib.m  test_simscape_mixed_rate_runtime_params.m  test_simscape_motor_module.m
python/: package.xml  pyproject.toml  verify_foc_simulation.py
python/launch/: pmsm_system.launch.py
python/pmsm_ros2/: __init__.py  foc_bindings.py  foc_node.py  matlab_bridge.py
